objects/MichalTest__c.object
<CustomObject>
    <fields>
        <fullName>MichalPicklistTest__c</fullName>
        <label>MichalPicklistTest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TestPicklist1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MichalTestCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MichalTestCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestClone__c</fullName>
        <label>TestClone</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>MichalTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MichalTestView</fullName>
        <columns>NAME</columns>
        <columns>TestClone__c</columns>
        <filterScope>Everything</filterScope>
        <label>MichalTestView</label>
    </listViews>
    <nameField>
        <label>MichalTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MichalTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>